# solidsign-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  export_deps.sh  manage.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy.yml  docker.yml  lint.yml  main.yml  test.yml
backend/: settings.py  urls.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/fixtures/: artists.json
core/migrations/: 0001_initial.py  0002_event_uuid.py  0003_artist_rename_image_url_event_image.py  0004_load_artists.py  0005_event_description.py  0006_alter_event_description.py  0007_artist_show_event_show.py
core/static/: protosans56.css
core/templates/: layout.html
core/templates/core/: artists.html  event.html  index.html
core/templates/core/calendar/: ics.tmpl
core/templates/core/includes/: artist.html  event.html  events.html  menu.html  mobile_menu.html  social.html
tests/: conftest.py  factories.py
tests/core/: test_admin.py  test_views.py
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
